# sageflow

./: .env.example  .gitignore  CHANGELOG.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  start.bat  stop.bat
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-test.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: chat.py  documents.py  llm.py  stats.py  users.py  websocket.py
backend/app/core/: auth.py  config.py  database.py  exceptions.py  logging_config.py  rate_limit.py
backend/app/models/: __init__.py  chat.py  document.py  user.py
backend/app/services/: cache_service.py  conversation_service.py  document_processor.py  embedding.py  health_service.py  hybrid_search.py  llm_service.py  metrics_service.py  rag_service.py  reranker.py  stats_service.py  user_service.py  vector_store.py  websocket_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_document_workflow.py  test_documents.py  test_health.py  test_rag_service.py  test_rate_limit.py  test_users.py  test_vector_store.py  test_websocket.py
docs/: api.md  deployment-guide.md  troubleshooting.md  技术方案与资源规划.md
frontend/: Dockerfile  jest.config.ts  jest.setup.ts  next.config.js  package.json  tailwind.config.js
k8s/: README.md  backend.yaml  celery.yaml  configmap.yaml  frontend.yaml  hpa.yaml  ingress.yaml  namespace.yaml  ollama.yaml  pdb.yaml  postgres.yaml  qdrant.yaml  redis.yaml  (+1 more)
(+39 files in other folders)
