[project]
name = "sageflow-backend"
version = "0.1.0"
description = "SageFlow - Smart Q&A Solutions Backend"
requires-python = ">=3.11"

[dependencies]
fastapi = "0.110.0"
uvicorn = "0.29.0"
pydantic = "2.7.0"
pydantic-settings = "2.2.1"
sqlalchemy = "2.0.29"
asyncpg = "0.29.0"
redis = "5.0.4"
celery = "5.4.0"
langchain = "0.2.0"
langchain-core = "0.2.0"
langchain-community = "0.2.0"
qdrant-client = "1.9.0"
sentence-transformers = "3.0.0"
pymupdf = "1.24.3"
python-docx = "1.1.0"
python-multipart = "0.0.9"
httpx = "0.27.0"
python-jose = "3.3.0"
passlib = "1.7.4"
bcrypt = "4.1.2"
